@@ -12,8 +12,10 @@
 	     friendly version.
 	   - Fixed a problem with the groups directory not being deleted.
 	   - Fixed a problem with not being able to add users to a group.
-	   - Fixed bad link in calendar
+	   - Fixed bad links in calendar
 	   - Added feature to be able to remove users from a group automaticly
+	   - changetheme.php will now read the files in the directory.  You no longer
+	     need to edit it to add themes
 
 [08152000] - Fixed a problem with the calendar not showing the months in the users
 	     langague preference.
